infra/manifest/web-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web-ui
  namespace: todo-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-web-ui
  template:
    metadata:
      labels:
        app: app-web-ui
    spec:
      containers:
        - name: app-web-ui
          image: yayakguns/web-ui:dev
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-web-ui
  namespace: todo-project
spec:
  type: NodePort
  selector:
    app: app-web-ui
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
